2011-08-27  Young Han Lee  <joybro@company100.net>

        Reviewed by Dirk Schulze.

        SVG animation fill="freeze" doesn't set baseVal to current animVal if animation stops before reaching the end
        https://bugs.webkit.org/show_bug.cgi?id=63553

        calculateAnimationPercentAndRepeat() is returning 1, which means 100%, whenever
        elapsed >= m_intervalEnd, but this is wrong because m_intervalEnd can be in the middle
        of the animation duration. (e.g. begin="0s" end="2s" dur="3s")

        This change makes the function return the animations's true progress instead of 100%
        when the animation ends.

        Test: svg/animations/animate-end-attribute.html

        * svg/animation/SVGSMILElement.cpp:
        (WebCore::SVGSMILElement::calculateAnimationPercentAndRepeat):

2011-08-27  Jarred Nicholls  <jarred@sencha.com>

        [Qt] Need spin-button implementation
        https://bugs.webkit.org/show_bug.cgi?id=65896

        Reviewed by Kenneth Rohde Christiansen.

        * platform/qt/RenderThemeQt.cpp:
        (WebCore::RenderThemeQt::adjustInnerSpinButtonStyle):
        (WebCore::RenderThemeQt::paintInnerSpinButton):
        * platform/qt/RenderThemeQt.h:

2011-08-26  Xiaomei Ji  <xji@chromium.org>

        Regression(91788): Bad cast in WebCore::blockWithNextLineBox
        https://bugs.webkit.org/show_bug.cgi?id=66090

        Reviewed by Ryosuke Niwa.

        This is more like (but not exactly) a revert of r91788.
        It does not search for previous or next root inline box in different
        render object, which completely eliminates the cause of this issue.
        And it removes createPositionAvoidingIgnoredNode(), changed its caller
        to use createLegacyEditingPosition(). createPositionAvoidingIgnoredNode
        is not correct when node is a replaced element whose caretMaxOffset
        could be greater than 1.

        Tests: editing/selection/move-by-word-visually-crash-test-1.html