@@ -135,7 +135,6 @@ RenderLayer::RenderLayer(RenderBoxModelObject* renderer)
     , m_next(0)
     , m_first(0)
     , m_last(0)
-    , m_inResizeMode(false)
     , m_posZOrderList(0)
     , m_negZOrderList(0)
     , m_normalFlowList(0)
@@ -143,6 +142,7 @@ RenderLayer::RenderLayer(RenderBoxModelObject* renderer)
 #ifndef NDEBUG    
     , m_clipRectsRoot(0)
 #endif
+    , m_inResizeMode(false)
     , m_scrollDimensionsDirty(true)
     , m_zOrderListsDirty(true)
     , m_normalFlowListDirty(true)
